add storybook, animate notes

--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc",
     "clean": "rm -rf ./dist",
     "build": "NODE_ENV=production webpack -p",
-    "deploy": "npm run clean && npm run build && sls deploy -v",
-    "start": "npm run clean && concurrently \"sls offline\" \"webpack-dev-server\" "
+    "predeploy": "tsc && npm run clean",
+    "deploy": "npm run build && sls deploy -v",
+    "start": "npm run clean && concurrently \"sls offline\" \"webpack-dev-server\" ",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "",
   "license": "ISC",
@@ -17,13 +21,19 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@emotion/babel-preset-css-prop": "^10.0.14",
     "@emotion/styled": "^10.0.14",
+    "@storybook/addon-actions": "^5.1.9",
+    "@storybook/addon-links": "^5.1.9",
+    "@storybook/addons": "^5.1.9",
+    "@storybook/react": "^5.1.9",
     "@types/aws-sdk": "^2.7.0",
     "@types/hapi__joi": "^15.0.3",
     "@types/node": "^12.6.8",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.5",
     "@types/rebass": "^3.0.4",
+    "@types/storybook__react": "^4.0.2",
     "@types/styled-system": "^5.0.0",
     "@types/uuid": "^3.4.5",
     "aws-sdk": "^2.501.0",
@@ -48,6 +58,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.10",
+    "react-spring": "^8.0.27",
+    "resize-observer-polyfill": "^1.5.1",
     "styled-system": "^5.0.16",
     "uuid": "^3.3.2"
   }
