--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,7 @@
       }
     ],
     "@babel/preset-typescript",
-    "@babel/preset-react"
+    "@babel/preset-react",
+    "@emotion/babel-preset-css-prop"
   ]
 }
